syntax = "proto3";

package sudoku_gui;


message SudokuDesignEvaluationJob {
  // 0 means empty, 1-9 means the respective digit is in that field
  // addressing is as follows: field[column+9*row]
  // this field always has 81 elements
  repeated int32 field = 1;
}

message SudokuDesignEvaluationResult {
  enum SolStatus {
    NO_SOLUTION = 0;
    UNIQUE_SOLUTION = 1;
    MULTIPLE_SOLUTIONS = 2;
  }
  SolStatus status = 1;

  // encoding as SudokuDesignEvaluationJob.field, present only if status = 1, all values are set to != 0
  repeated int32 solution = 2;

  // encoding as SudokuDesignEvaluationJob.field, present only if status = 0
  // those field values which are involved in some way in an inconsistency and need to be considered for modification are set, all others are 0
  repeated int32 inconsistency_involved = 3;
}

service SudokuGUI {
  rpc requestSudokuEvaluation(google.protobuf.Empty) returns(SudokuDesignEvaluationJob);
  rpc processEvaluationResult(SudokuDesignEvaluationResult) returns(google.protobuf.Empty);
}